fixed most blocks