@@ -3,6 +3,7 @@ package com.kyanite.deeperdarker.content.blocks.entity;
 import com.kyanite.deeperdarker.content.DDBlockEntities;
 import com.kyanite.deeperdarker.datagen.data.loot.DDChestLoot;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.protocol.Packet;
 import net.minecraft.network.protocol.game.ClientGamePacketListener;
@@ -17,10 +18,10 @@ import net.minecraft.world.level.storage.loot.LootParams;
 import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
-import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 
+@SuppressWarnings("NullableProblems")
 public class CrystallizedAmberBlockEntity extends BlockEntity {
     public boolean fossilizedEntity;
     public float rotation;
@@ -40,9 +41,9 @@ public class CrystallizedAmberBlockEntity extends BlockEntity {
             return;
         }
 
-        LootTable table = level.getServer().getLootData().getLootTable(DDChestLoot.CRYSTALLIZED_AMBER);
+        LootTable table = level.getServer().reloadableRegistries().getLootTable(DDChestLoot.CRYSTALLIZED_AMBER);
         List<ItemStack> list = table.getRandomItems(new LootParams.Builder((ServerLevel) level).withParameter(LootContextParams.ORIGIN, this.getBlockPos().getCenter()).withParameter(LootContextParams.BLOCK_ENTITY, this).create(LootContextParamSets.CHEST));
-        this.loot = list.get(0);
+        this.loot = list.getFirst();
         this.setChanged();
     }
 
@@ -56,22 +57,24 @@ public class CrystallizedAmberBlockEntity extends BlockEntity {
     }
 
     @Override
-    public @NotNull CompoundTag getUpdateTag() {
+    public CompoundTag getUpdateTag(HolderLookup.Provider pRegistries) {
         CompoundTag tag = new CompoundTag();
-        tag.put("item", this.loot.save(new CompoundTag()));
+        tag.put("item", this.loot.save(pRegistries));
         tag.putBoolean("leech", this.fossilizedEntity);
         return tag;
     }
 
     @Override
-    public void load(CompoundTag pTag) {
-        if(pTag.contains("item")) this.loot = ItemStack.of(pTag.getCompound("item"));
+    protected void loadAdditional(CompoundTag pTag, HolderLookup.Provider pRegistries) {
+        super.loadAdditional(pTag, pRegistries);
+        if(pTag.contains("item")) this.loot = ItemStack.parse(pRegistries, pTag.getCompound("item")).get();
         if(pTag.contains("leech")) this.fossilizedEntity = pTag.getBoolean("leech");
     }
 
     @Override
-    protected void saveAdditional(CompoundTag pTag) {
-        pTag.put("item", this.loot.save(new CompoundTag()));
+    protected void saveAdditional(CompoundTag pTag, HolderLookup.Provider pRegistries) {
+        super.saveAdditional(pTag, pRegistries);
+        pTag.put("item", this.loot.save(pRegistries));
         pTag.putBoolean("leech", this.fossilizedEntity);
     }
 }
